emrysserver-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: emrysserver-pod
  labels:
    app: emrysserver
spec:
  containers:
  - name: emrysserver-container
    image: gcr.io/emrys-12/emrysserver
    volumeMounts:
    - name: secret-volume
      mountPath: /etc/secret-volume
    - name: emrys-volume
      mountPath: /data
  - name: cloudsql-proxy
    image: gcr.io/cloudsql-docker/gce-proxy:1.11
    command: ["/cloud_sql_proxy",
              "-instances=emrys-12:us-central1:emrysserver-psql=tcp:5432"]
    # volumeMounts:
    #   - name: cloudsql-instance-credentials
    #     mountPath: /secrets/cloudql
    #     readOnly: true
  volumes:
  - name: secret-volume
    secret:
      secretName: emrysserver-secret
  - name: emrys-volume
    gcePersistentDisk:
      pdName: emrys-disk
      fsType: ex4
