emrys-ing.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: emrys-ing
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "emrys-static-ip"
    kubernetes.io/ingress.allow-http: "false"
spec:
  tls:
  - secretName: emrys-tls-secret
  backend:
    serviceName: default-backend-svc
    servicePort: 8080
  rules:
  - host: api.emrys.io
    http:
      paths:
      - path: /auth/*
        backend:
          serviceName: auth-svc
          servicePort: 8080
      - path: /user/*
        backend:
          serviceName: user-svc
          servicePort: 8080
      - path: /stripe/*
        backend:
          serviceName: user-svc
          servicePort: 8080
      - path: /image/*
        backend:
          serviceName: image-svc
          servicePort: 8080
      - path: /auction/*
        backend:
          serviceName: miner-svc
          servicePort: 8080
      - path: /miner
        backend:
          serviceName: miner-svc
          servicePort: 8080
      - path: /miner/*
        backend:
          serviceName: miner-svc
          servicePort: 8080
      - path: /job/*
        backend:
          serviceName: job-svc
          servicePort: 8080
  - host: registry.emrys.io
    http:
      paths:
      - backend:
          serviceName: registry-svc
          servicePort: 5000
  - host: data.emrys.io
    http:
      paths:
      - backend:
          serviceName: data-svc
          servicePort: 8080
